--- a/flexbox/1displayFlex.html
+++ b/flexbox/1displayFlex.html
@@ -83,7 +83,7 @@
         <div class="bg-secondary d-flex  p-2 mt-3">
             <div class="bg-info p-2 flex-fill">Flex Item 1</div>
             <div class="bg-warning p-2 flex-fill">Flex Item 2</div>
-            <div class="bg-primary p-2 flex-fill">Flex Item 3</div>
+            <!-- <div class="bg-primary p-2 flex-fill">Flex Item 3</div> -->
         </div>
 
     </div>
